--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   eva_icons_flutter: ^3.1.0
   lottie: ^3.1.2
   flutter_svg: ^2.0.10+1
+  sms_autofill: ^2.3.1
 
 dev_dependencies:
   flutter_test:
