--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   sms_autofill: ^2.3.1
   gap: ^3.0.1
   api_cache_manager: ^1.0.2
+  sqflite_common_ffi: ^2.3.3
+  sqflite: ^2.3.3+1
 
 
 dev_dependencies:
