--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   api_cache_manager: ^1.0.2
   sqflite_common_ffi: ^2.3.3
   sqflite: ^2.3.3+1
+  shimmer: ^3.0.0
 
 
 dev_dependencies:
