--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   percent_indicator: ^4.2.3
   flutter_riverpod: ^2.5.1
   flutter_gemini: ^2.0.3
+  dash_chat_2: ^0.0.21
 
 
 dev_dependencies:
