--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_riverpod: ^2.5.1
   flutter_gemini: ^2.0.3
   dash_chat_2: ^0.0.21
+  palette_generator: ^0.3.3+3
+  flutter_card_swiper: ^7.0.1
 
 
 dev_dependencies:
